# Nesle-codex

./: .gitignore  NEXT_STEPS.md  README.md  pyproject.toml  setup.py
benchmarks/: phase5_benchmark.py  phase6_console_ablation.py  plot_phase6.py
cpp/bindings/: cuda_module.cu  module.cpp
cpp/include/nesle/: bus.hpp  console.hpp  controller.hpp  (+7 more)
cpp/src/: rom.cpp  smb.cpp
cpp/tools/: benchmark_cuda_kernels.cu  compare_rgb_frame.cpp  render_nestopia_state.cpp  run_6502_binary.cpp  run_cuda_smoke.cu  run_nes_headless.cpp
docker/: cuda.Dockerfile
docs/: architecture.md  cpu-validation.md  headless-runner.md  phase5-results.md  phase6-readiness.md  phase6-report.md  phases.md  research-notes.md
docs/data/: phase6-a100-summary.json  phase6-ram-obs-a100.json
examples/: sb3_train.py
scripts/: benchmark_cuda_kernels.sh  build_cuda_extension.sh  compare_openemu_state.sh  render_openemu_state.sh  reproduce_phase6.sh  smoke_phase2_user_rom.sh  smoke_phase4_user_rom.py  smoke_phase4_user_rom.sh  smoke_user_rom.sh  verify.sh  verify_cuda.sh  verify_native_binding.sh  verify_phase0.sh  verify_phase4.py  verify_phase4.sh  verify_phase5.sh
src/nesle/: __init__.py  actions.py  env.py  rom.py  smb.py
tests/: test_actions.py  test_critical_fixes.py  test_env.py  test_rom.py  test_smb.py
tests/cpp/: test_console.cpp  test_core.cpp  test_cpu.cpp  test_cpu_runner.cpp  test_cuda_batch.cpp  test_cuda_batch_console.cpp  test_cuda_batch_runner.cpp  test_cuda_bus.cpp  test_cuda_cpu_step.cpp  test_cuda_ppu.cpp  test_cuda_render.cpp  test_cuda_reset_cache.cpp  test_headless.cpp
(+12 files in other folders)
